--- a/adaptive-media-web/src/main/resources/content/Language_ca.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_ca.properties
@@ -4,6 +4,7 @@ adapt-all-images=Adaptar-se a totes les imatges (Automatic Translation)
 adapt-remaining=Adaptar-se restant (Automatic Translation)
 adapted-images=Imatges (Automatic Translation)
 adaptive-media=Mèdia adaptativa (Automatic Translation)
+adaptive-media-configuration-name=Mèdia adaptativa (Automatic Translation)
 add-a-resolution-for-high-density-displays=Afegir una resolució per a exhibicions d'alta densitat (2 x). (Automatic Translation)
 add-image-resolution=Afegir la resolució de la imatge (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Pro
 the-id-is-based-on-the-name-field=L'ID es basa en el camp de nom. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Les imatges d'aquesta resolució estan ja adaptades. (Automatic Translation)
 there-are-no-image-resolutions=No hi ha cap resolucions d'imatge. Podeu afegir un clicant el botó de plus a la cantonada inferior dreta. (Automatic Translation)
+workers-core-size=Processos bàsics (Automatic Translation)
+workers-core-size-key-description=Nombre de processos que sempre disponibles per a generar adaptar mitjans de comunicació. Aquesta configuració no pot superar els processos màximes escena. (Automatic Translation)
+workers-max-size=Processos de Max (Automatic Translation)
+workers-max-size-key-description=El nombre màxim de processos per a la generació adaptar mitjans de comunicació. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
