--- a/adaptive-media-web/src/main/resources/content/Language_et.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_et.properties
@@ -4,6 +4,7 @@ adapt-all-images=Kohandada kõik pildid (Automatic Translation)
 adapt-remaining=Kohandada järelejäänud (Automatic Translation)
 adapted-images=Kohandatud pilte (Automatic Translation)
 adaptive-media=Adaptiivne Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptiivne Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Lisada resolutsiooni tiheasustusega näidikud (2 x). (Automatic Translation)
 add-image-resolution=Piltide lisamine (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Tö
 the-id-is-based-on-the-name-field=ID põhineb välja nimi. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Käesolev resolutsioon pildid on juba kohandatud. (Automatic Translation)
 there-are-no-image-resolutions=Ei ole pilti lahendused. Saate seda klõpsates pluss nuppu all paremas nurgas. (Automatic Translation)
+workers-core-size=Põhiprotsesside (Automatic Translation)
+workers-core-size-key-description=Alati saadaval tekitama protsesside arv kohandatud media. See säte ei tohi olla max protsesside seadmine. (Automatic Translation)
+workers-max-size=Max protsesside (Automatic Translation)
+workers-max-size-key-description=Maksimaalne arv loomiseks protsessid kohandatud media. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
