--- a/adaptive-media-web/src/main/resources/content/Language_fr.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_fr.properties
@@ -4,6 +4,7 @@ adapt-all-images=S’adapter à toutes les Images (Automatic Translation)
 adapt-remaining=Adapter le restant (Automatic Translation)
 adapted-images=Images adaptées (Automatic Translation)
 adaptive-media=Les médias adaptatives (Automatic Translation)
+adaptive-media-configuration-name=Les médias adaptatives (Automatic Translation)
 add-a-resolution-for-high-density-displays=Ajouter une résolution pour les écrans haute densité (2 x). (Automatic Translation)
 add-image-resolution=Ajouter la résolution de l’Image (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Tra
 the-id-is-based-on-the-name-field=L’ID est basé sur le champ nom. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Les images de cette résolution sont déjà adaptés. (Automatic Translation)
 there-are-no-image-resolutions=Il n’y a aucune résolution de l’image. Vous pouvez en ajouter un en cliquant sur le bouton "+" sur le coin inférieur droit. (Automatic Translation)
+workers-core-size=Processus de base (Automatic Translation)
+workers-core-size-key-description=Le nombre de processus toujours disponibles pour générer une adaptation médias. Ce paramètre ne doit pas dépasser les processus max réglage. (Automatic Translation)
+workers-max-size=Processus de Max (Automatic Translation)
+workers-max-size-key-description=Le nombre maximal de processus pour générer une adaptation médias. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
