--- a/adaptive-media-web/src/main/resources/content/Language_hi_IN.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_hi_IN.properties
@@ -4,6 +4,7 @@ adapt-all-images=सभी छवियाँ अनुकूलन (Automatic T
 adapt-remaining=शेष अनुकूलन (Automatic Translation)
 adapted-images=अनुकूलित छवियाँ (Automatic Translation)
 adaptive-media=अनुकूली मीडिया (Automatic Translation)
+adaptive-media-configuration-name=अनुकूली मीडिया (Automatic Translation)
 add-a-resolution-for-high-density-displays=उच्च घनत्व (2 एक्स) प्रदर्शित करता है के लिए एक समाधान जोड़ें। (Automatic Translation)
 add-image-resolution=छवि संकल्प जोड़ें (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=प
 the-id-is-based-on-the-name-field=ID नाम फ़ील्ड पर आधारित है। (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=इस संकल्प के लिए चित्र पहले से ही अनुकूलित कर रहे हैं। (Automatic Translation)
 there-are-no-image-resolutions=वहाँ कोई छवि संकल्प कर रहे हैं। आप एक नीचे दायें कोने पर अधिक बटन क्लिक करके जोड़ सकते हैं। (Automatic Translation)
+workers-core-size=कोर प्रक्रियाओं (Automatic Translation)
+workers-core-size-key-description=प्रक्रियाओं की संख्या हमेशा अनुकूलित मीडिया पैदा करने के लिए उपलब्ध है । यह सेटिंग अधिकतम प्रक्रियाओं की सेटिंग से अधिक नहीं हो सकती । (Automatic Translation)
+workers-max-size=अधिकतम प्रक्रियाओं (Automatic Translation)
+workers-max-size-key-description=अनुकूलित मीडिया पैदा करने के लिए प्रक्रियाओं की अधिकतम संख्या । (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
