--- a/adaptive-media-web/src/main/resources/content/Language_hu.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_hu.properties
@@ -4,6 +4,7 @@ adapt-all-images=Igazítsa az összes kép (Automatic Translation)
 adapt-remaining=Alkalmazkodni a fennmaradó (Automatic Translation)
 adapted-images=Igazított képek (Automatic Translation)
 adaptive-media=Adaptive Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptive Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Add hozzá nagy sűrűségű jeleníti meg (2 x) felbontású. (Automatic Translation)
 add-image-resolution=Add hozzá a kép felbontása (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Ké
 the-id-is-based-on-the-name-field=Az azonosító alapja a név mezőben. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=A képeket ezt az állásfoglalást már igazítani. (Automatic Translation)
 there-are-no-image-resolutions=Vannak nem képfelbontást. Add hozzá kattintva a plusz gombra a jobb alsó sarokban. (Automatic Translation)
+workers-core-size=Alapvető folyamatai (Automatic Translation)
+workers-core-size-key-description=Mindig elérhető, a folyamatok száma igazítani a média. Ez a beállítás nem haladhatja meg a max folyamatok beállítása. (Automatic Translation)
+workers-max-size=Max folyamatok (Automatic Translation)
+workers-max-size-key-description=Generáló folyamatok maximális száma a média igazítani. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
