--- a/adaptive-media-web/src/main/resources/content/Language_in.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_in.properties
@@ -4,6 +4,7 @@ adapt-all-images=Menyesuaikan semua gambar (Automatic Translation)
 adapt-remaining=Beradaptasi tersisa (Automatic Translation)
 adapted-images=Gambar yang disesuaikan (Automatic Translation)
 adaptive-media=Adaptif Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptif Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Tambahkan resolusi untuk kepadatan tinggi menampilkan (2 x). (Automatic Translation)
 add-image-resolution=Tambahkan resolusi gambar (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Pen
 the-id-is-based-on-the-name-field=ID didasarkan pada bidang nama. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Gambar untuk resolusi ini sudah diadaptasi. (Automatic Translation)
 there-are-no-image-resolutions=Ada tidak ada gambar resolusi. Anda dapat menambahkan salah satu dengan mengklik tombol plus di sudut kanan bawah. (Automatic Translation)
+workers-core-size=Proses inti (Automatic Translation)
+workers-core-size-key-description=Jumlah proses selalu tersedia untuk menghasilkan disesuaikan media. Pengaturan ini tidak boleh melebihi proses maks pengaturan. (Automatic Translation)
+workers-max-size=Max proses (Automatic Translation)
+workers-max-size-key-description=Jumlah maksimum proses untuk menghasilkan disesuaikan media. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
