--- a/adaptive-media-web/src/main/resources/content/Language_it.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_it.properties
@@ -4,6 +4,7 @@ adapt-all-images=Tutte le immagini di adattare (Automatic Translation)
 adapt-remaining=Adattare il rimanente (Automatic Translation)
 adapted-images=Immagini adattate (Automatic Translation)
 adaptive-media=Adattiva Media (Automatic Translation)
+adaptive-media-configuration-name=Adattiva Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Aggiungere una risoluzione per schermi ad alta densità (2x). (Automatic Translation)
 add-image-resolution=Aggiungi immagine risoluzione (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=L'e
 the-id-is-based-on-the-name-field=L'ID è basato sul campo nome. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Le immagini per questa risoluzione sono già adattate. (Automatic Translation)
 there-are-no-image-resolutions=Non ci sono nessun risoluzioni di immagine. È possibile aggiungere uno facendo clic sul pulsante più in basso a destra. (Automatic Translation)
+workers-core-size=Processi di base (Automatic Translation)
+workers-core-size-key-description=Il numero di processi sempre disponibili per la generazione di adeguati supporti. Questa impostazione non può superare i processi max impostazione. (Automatic Translation)
+workers-max-size=Processi di max (Automatic Translation)
+workers-max-size-key-description=Il numero massimo di processi per la generazione di adeguati supporti. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
