--- a/adaptive-media-web/src/main/resources/content/Language_ko.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_ko.properties
@@ -4,6 +4,7 @@ adapt-all-images=모든 이미지를 적응 (Automatic Translation)
 adapt-remaining=남은 적응 (Automatic Translation)
 adapted-images=적응된 이미지 (Automatic Translation)
 adaptive-media=적응형 미디어 (Automatic Translation)
+adaptive-media-configuration-name=적응형 미디어 (Automatic Translation)
 add-a-resolution-for-high-density-displays=고밀도 디스플레이 (2 x)에 대 한 해상도 추가 합니다. (Automatic Translation)
 add-image-resolution=이미지 해상도 추가 (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=이
 the-id-is-based-on-the-name-field=ID 이름 필드를 기반으로 합니다. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=이 해상도 대 한 이미지는 이미 적응 시켰다. (Automatic Translation)
 there-are-no-image-resolutions=아무 이미지 해상도 있다. 오른쪽 하단 모서리에 있는 더하기 버튼을 클릭 하 여 추가할 수 있습니다. (Automatic Translation)
+workers-core-size=핵심 프로세스 (Automatic Translation)
+workers-core-size-key-description=항상 생성 하는 데 사용할 수 있는 프로세스의 수 미디어 적응. 이 설정은 설정 최대 프로세스를 초과할 수 없습니다. (Automatic Translation)
+workers-max-size=최대 프로세스 (Automatic Translation)
+workers-max-size-key-description=생성 하기 위한 프로세스의 최대 수 미디어 적응. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
