--- a/adaptive-media-web/src/main/resources/content/Language_nb.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_nb.properties
@@ -4,6 +4,7 @@ adapt-all-images=Tilpasse alle bilder (Automatic Translation)
 adapt-remaining=Tilpasse gjenværende (Automatic Translation)
 adapted-images=Tilpasset bilder (Automatic Translation)
 adaptive-media=Adaptive Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptive Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Legge til en løsning for høy tetthet viser (2 x). (Automatic Translation)
 add-image-resolution=Legge til bildeoppløsning (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Bil
 the-id-is-based-on-the-name-field=IDen er basert på feltet. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Bildene for denne oppløsningen er allerede tilpasset. (Automatic Translation)
 there-are-no-image-resolutions=Det er ingen bildeoppløsninger. Du kan legge til en ved å klikke på pluss-knappen på nederst til høyre. (Automatic Translation)
+workers-core-size=Kjerneprosesser (Automatic Translation)
+workers-core-size-key-description=Antall prosesser alltid tilgjengelig for å generere tilpasset media. Denne innstillingen kan ikke overstige max prosessene innstilling. (Automatic Translation)
+workers-max-size=Max prosesser (Automatic Translation)
+workers-max-size-key-description=Maksimalt antall prosesser for å generere tilpasset media. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
