--- a/adaptive-media-web/src/main/resources/content/Language_pl.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_pl.properties
@@ -4,6 +4,7 @@ adapt-all-images=Dostosowanie wszystkich obrazów (Automatic Translation)
 adapt-remaining=Dostosowania, pozostałe (Automatic Translation)
 adapted-images=Dostosować obrazy (Automatic Translation)
 adaptive-media=Adaptacyjne Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptacyjne Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Dodaj rozdzielczość wyświetlaczy o dużej gęstości (2 x). (Automatic Translation)
 add-image-resolution=Dodaj zdjęcia o rozdzielczości (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Prz
 the-id-is-based-on-the-name-field=Identyfikator jest oparty na nazwa pola. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Obrazy dla tej rozdzielczości są już przystosowane. (Automatic Translation)
 there-are-no-image-resolutions=Istnieją nie rozdzielczości obrazu. Można dodać, klikając przycisk ze znakiem plus w prawym dolnym rogu. (Automatic Translation)
+workers-core-size=Podstawowych procesów (Automatic Translation)
+workers-core-size-key-description=Liczba procesów, które zawsze dostępne dla generowania dostosowane nośniki. To ustawienie nie może przekraczać procesy max ustawienie. (Automatic Translation)
+workers-max-size=Procesy Max (Automatic Translation)
+workers-max-size-key-description=Maksymalna liczba procesów generowania dostosowane nośniki. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
