--- a/adaptive-media-web/src/main/resources/content/Language_ro.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_ro.properties
@@ -4,6 +4,7 @@ adapt-all-images=Adaptarea toate imaginile (Automatic Translation)
 adapt-remaining=Adaptarea rămase (Automatic Translation)
 adapted-images=Adaptate imagini (Automatic Translation)
 adaptive-media=Adaptive Media (Automatic Translation)
+adaptive-media-configuration-name=Adaptive Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Adauga o rezoluţie pentru ecrane de înaltă densitate (2 x). (Automatic Translation)
 add-image-resolution=Adauga rezoluţia imaginii (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Pre
 the-id-is-based-on-the-name-field=ID-ul este bazat pe câmpul de nume. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Imaginile pentru această rezoluţie sunt deja adaptate. (Automatic Translation)
 there-are-no-image-resolutions=Nu există nici o rezoluţiile de imagine. Puteţi adăuga unul făcând clic pe butonul plus pe colţul din dreapta. (Automatic Translation)
+workers-core-size=Procesele de bază (Automatic Translation)
+workers-core-size-key-description=Numărul de procese întotdeauna disponibile pentru generarea adaptat mass-media. Această setare nu poate depăși procesele max setarea. (Automatic Translation)
+workers-max-size=Procesele de Max (Automatic Translation)
+workers-max-size-key-description=Numărul maxim de procese pentru generarea adaptat mass-media. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
