--- a/adaptive-media-web/src/main/resources/content/Language_sk.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_sk.properties
@@ -4,6 +4,7 @@ adapt-all-images=Prispôsobiť všetky obrázky (Automatic Translation)
 adapt-remaining=Prispôsobiť zostávajúce (Automatic Translation)
 adapted-images=Upraviť obrázky (Automatic Translation)
 adaptive-media=Adaptívne médií (Automatic Translation)
+adaptive-media-configuration-name=Adaptívne médií (Automatic Translation)
 add-a-resolution-for-high-density-displays=Pridať rozlíšenie displejov vysokej hustoty (2 x). (Automatic Translation)
 add-image-resolution=Pridať rozlíšenie obrazu (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Spr
 the-id-is-based-on-the-name-field=ID je založený na názov poľa. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Obrazy pre toto rozlíšenie sú už prispôsobené. (Automatic Translation)
 there-are-no-image-resolutions=Neexistujú žiadne snímky s rozlíšením. Môžete pridať kliknutím na tlačidlo plus na pravom dolnom rohu. (Automatic Translation)
+workers-core-size=Kľúčové procesy (Automatic Translation)
+workers-core-size-key-description=Počet procesov, ktoré sú vždy k dispozícii pre generovanie prispôsobiť médiá. Toto nastavenie nemôže prekročiť maximálne procesy nastavenie. (Automatic Translation)
+workers-max-size=Max procesov (Automatic Translation)
+workers-max-size-key-description=Maximálny počet procesov pre generovanie prispôsobiť médiá. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
