--- a/adaptive-media-web/src/main/resources/content/Language_sl.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_sl.properties
@@ -4,6 +4,7 @@ adapt-all-images=Prilagoditev vse slike (Automatic Translation)
 adapt-remaining=Prilagoditev, preostali (Automatic Translation)
 adapted-images=Prilagojena podoba (Automatic Translation)
 adaptive-media=Prilagodljivo medijev (Automatic Translation)
+adaptive-media-configuration-name=Prilagodljivo medijev (Automatic Translation)
 add-a-resolution-for-high-density-displays=Dodaj resolucijo za visoko gostoto zasloni (2 x). (Automatic Translation)
 add-image-resolution=Dodaj ločljivost slike (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Obd
 the-id-is-based-on-the-name-field=ID temelji na ime polja. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Slike za to resolucijo so že prilagojene. (Automatic Translation)
 there-are-no-image-resolutions=Obstaja nobene slike resolucij. Dodate lahko eno tako, da kliknete gumb plus v spodnjem desnem kotu. (Automatic Translation)
+workers-core-size=Jedro procesov (Automatic Translation)
+workers-core-size-key-description=Število procesov, ki so vedno na voljo za ustvarjanje prilagojenih medijev. Ta nastavitev ne sme presegati max procesov nastavitev. (Automatic Translation)
+workers-max-size=Max procesov (Automatic Translation)
+workers-max-size-key-description=Največje število procesov za ustvarjanje prilagojenih medijev. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
