--- a/adaptive-media-web/src/main/resources/content/Language_th.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_th.properties
@@ -4,6 +4,7 @@ adapt-all-images=ปรับภาพทั้งหมด (Automatic Translati
 adapt-remaining=ปรับเหลือ (Automatic Translation)
 adapted-images=รูปภาพดัดแปลง (Automatic Translation)
 adaptive-media=ปรับสื่อ (Automatic Translation)
+adaptive-media-configuration-name=ปรับสื่อ (Automatic Translation)
 add-a-resolution-for-high-density-displays=เพิ่มความละเอียดสำหรับจอแสดงผลความหนาแน่นสูง (2x) (Automatic Translation)
 add-image-resolution=เพิ่มความละเอียดของภาพ (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=ก
 the-id-is-based-on-the-name-field=หมายเลขอยู่ในฟิลด์ชื่อ (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=แล้วมีปรับภาพเพื่อแก้ปัญหานี้ (Automatic Translation)
 there-are-no-image-resolutions=มีความละเอียดไม่ คุณสามารถเพิ่มโดยคลิกปุ่มบวกบนมุมขวาล่าง (Automatic Translation)
+workers-core-size=กระบวนการหลัก (Automatic Translation)
+workers-core-size-key-description=จำนวนพร้อมเสมอสำหรับการสร้างกระบวนการดัดแปลงสื่อ การตั้งค่านี้ไม่เกินการตั้งค่ากระบวนการสูงสุด (Automatic Translation)
+workers-max-size=กระบวนการสูงสุด (Automatic Translation)
+workers-max-size-key-description=จำนวนสูงสุดของกระบวนการสำหรับการสร้างดัดแปลงสื่อ (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
