--- a/adaptive-media-web/src/main/resources/content/Language_tr.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_tr.properties
@@ -4,6 +4,7 @@ adapt-all-images=Tüm görüntüleri uyum (Automatic Translation)
 adapt-remaining=Kalan uyum (Automatic Translation)
 adapted-images=Adapte görüntüleri (Automatic Translation)
 adaptive-media=Adaptif medya (Automatic Translation)
+adaptive-media-configuration-name=Adaptif medya (Automatic Translation)
 add-a-resolution-for-high-density-displays=Yüksek yoğunluklu ekran (2 x) için bir çözünürlük ekleyin. (Automatic Translation)
 add-image-resolution=Görüntü çözünürlüğü Ekle (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Gö
 the-id-is-based-on-the-name-field=Kimlik adı alanı temel alan. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Bu çözüme yönelik görüntüleri zaten uyarlanmış. (Automatic Translation)
 there-are-no-image-resolutions=Hiçbir görüntü çözümü vardır. Sen-ebilmek eklemek belgili tanımlık alt doğru köşe üzerinde artı düğmesini tıklatarak bir. (Automatic Translation)
+workers-core-size=Çekirdek işlemleri (Automatic Translation)
+workers-core-size-key-description=İşlem oluşturmak için her zaman kullanılabilir sayısını medya uyarlanmıştır. Bu ayarı ayarı en fazla süreçleri geçemez. (Automatic Translation)
+workers-max-size=Max süreçleri (Automatic Translation)
+workers-max-size-key-description=En çok üretmek için işlem sayısını medya uyarlanmıştır. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
