--- a/adaptive-media-web/src/main/resources/content/Language_zh_CN.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_zh_CN.properties
@@ -4,6 +4,7 @@ adapt-all-images=适应所有图像 (Automatic Translation)
 adapt-remaining=适应剩余 (Automatic Translation)
 adapted-images=调整的图像 (Automatic Translation)
 adaptive-media=自适应媒体 (Automatic Translation)
+adaptive-media-configuration-name=自适应媒体 (Automatic Translation)
 add-a-resolution-for-high-density-displays=添加为高密度显示 (2 x) 的决议。 (Automatic Translation)
 add-image-resolution=添加图像分辨率 (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=处
 the-id-is-based-on-the-name-field=ID 基于名称字段。 (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=已经适应了这项决议的图像。 (Automatic Translation)
 there-are-no-image-resolutions=没有图像分辨率。你可以添加一个通过单击右下角的加号按钮。 (Automatic Translation)
+workers-core-size=核心流程 (Automatic Translation)
+workers-core-size-key-description=总是可用于生成适应媒体的进程数。此设置不能超过 "最大进程" 设置。 (Automatic Translation)
+workers-max-size=最大加工 (Automatic Translation)
+workers-max-size-key-description=生成适应介质的最大进程数。 (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
