--- a/adaptive-media-web/src/main/resources/content/Language_zh_TW.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_zh_TW.properties
@@ -4,6 +4,7 @@ adapt-all-images=適應所有圖像 (Automatic Translation)
 adapt-remaining=適應剩餘 (Automatic Translation)
 adapted-images=調整的圖像 (Automatic Translation)
 adaptive-media=自我調整媒體 (Automatic Translation)
+adaptive-media-configuration-name=自我調整媒體 (Automatic Translation)
 add-a-resolution-for-high-density-displays=添加為高密度顯示 (2 x) 的決議。 (Automatic Translation)
 add-image-resolution=添加圖像解析度 (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=處
 the-id-is-based-on-the-name-field=ID 基於名稱欄位。 (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=已經適應了這項決議的圖像。 (Automatic Translation)
 there-are-no-image-resolutions=沒有圖像解析度。你可以添加一個通過按一下右下角的加號按鈕。 (Automatic Translation)
+workers-core-size=核心流程 (Automatic Translation)
+workers-core-size-key-description=總是可用於生成適應媒體的進程數。此設置不能超過 "最大進程" 設置。 (Automatic Translation)
+workers-max-size=最大加工 (Automatic Translation)
+workers-max-size-key-description=生成適應介質的最大進程數。 (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
