--- a/adaptive-media-web/src/main/resources/content/Language_cs.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_cs.properties
@@ -4,6 +4,7 @@ adapt-all-images=Přizpůsobit všechny obrázky (Automatic Translation)
 adapt-remaining=Přizpůsobit, zbývající (Automatic Translation)
 adapted-images=Upravit obrázky (Automatic Translation)
 adaptive-media=Adaptivní média (Automatic Translation)
+adaptive-media-configuration-name=Adaptivní média (Automatic Translation)
 add-a-resolution-for-high-density-displays=Přidáte řešení pro displeje s vysokou hustotou (2 x). (Automatic Translation)
 add-image-resolution=Přidat rozlišení obrazu (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Zpr
 the-id-is-based-on-the-name-field=ID je založen na pole jméno. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Obrázky pro toto řešení jsou již upraveny. (Automatic Translation)
 there-are-no-image-resolutions=Neexistují žádné rozlišení obrazu. Můžete přidat klepnutím na tlačítko plus v pravém dolním rohu. (Automatic Translation)
+workers-core-size=Klíčové procesy (Automatic Translation)
+workers-core-size-key-description=Počet procesů, které jsou vždy k dispozici pro generování upraveny média. Toto nastavení nemůže překročit maximální procesy nastavení. (Automatic Translation)
+workers-max-size=Max procesy (Automatic Translation)
+workers-max-size-key-description=Maximální počet procesů pro generování upraveny média. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
