--- a/adaptive-media-web/src/main/resources/content/Language_es.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_es.properties
@@ -4,6 +4,7 @@ adapt-all-images=Adaptar todas las imágenes (Automatic Translation)
 adapt-remaining=Adaptar restante (Automatic Translation)
 adapted-images=Imágenes adaptadas (Automatic Translation)
 adaptive-media=Medios de adaptación (Automatic Translation)
+adaptive-media-configuration-name=Medios de adaptación (Automatic Translation)
 add-a-resolution-for-high-density-displays=Añadir una resolución para pantallas de alta densidad (2 x). (Automatic Translation)
 add-image-resolution=Añadir la resolución de la imagen (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Pro
 the-id-is-based-on-the-name-field=La identificación se basa en el campo nombre. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Las imágenes de esta resolución ya están adaptadas. (Automatic Translation)
 there-are-no-image-resolutions=No hay ninguna resolución de la imagen. Puede agregar uno haciendo clic en el botón más en la esquina inferior derecha. (Automatic Translation)
+workers-core-size=Procesos básicos (Automatic Translation)
+workers-core-size-key-description=El número de procesos siempre disponibles para la generación de adapta los medios de comunicación. Este ajuste no puede exceder los procesos máximo ajuste. (Automatic Translation)
+workers-max-size=Procesos de Max (Automatic Translation)
+workers-max-size-key-description=El número máximo de procesos para la generación de adapta los medios de comunicación. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
