--- a/adaptive-media-web/src/main/resources/content/Language_lt.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_lt.properties
@@ -4,6 +4,7 @@ adapt-all-images=Suderinti visas nuotraukas (Automatic Translation)
 adapt-remaining=Prisitaikyti, likę (Automatic Translation)
 adapted-images=Pritaikyti vaizdus (Automatic Translation)
 adaptive-media=Prisitaikanti Media (Automatic Translation)
+adaptive-media-configuration-name=Prisitaikanti Media (Automatic Translation)
 add-a-resolution-for-high-density-displays=Pridėti rezoliuciją dėl didelio tankio rodo (2 x). (Automatic Translation)
 add-image-resolution=Pridėti vaizdo skiriamoji geba (Automatic Translation)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Apd
 the-id-is-based-on-the-name-field=ID yra pagrįstas lauko pavadinimas. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=Už šią rezoliuciją vaizdai jau pritaikyta. (Automatic Translation)
 there-are-no-image-resolutions=Šiuo metu nėra atvaizdų skyrą. Galite pridėti vieną iš elementų spustelėdami pliuso mygtuką apatiniame dešiniajame kampe. (Automatic Translation)
+workers-core-size=Pagrindinius procesus (Automatic Translation)
+workers-core-size-key-description=Visada galima generuoti procesų skaičius pritaikytos medijos. Šis parametras negali viršyti maks procesų nustatymas. (Automatic Translation)
+workers-max-size=Max procesai (Automatic Translation)
+workers-max-size-key-description=Maksimalų skaičių procesai generuoti pritaikytos medijos. (Automatic Translation)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
