--- a/adaptive-media-web/src/main/resources/content/Language_pt_PT.properties
+++ b/adaptive-media-web/src/main/resources/content/Language_pt_PT.properties
@@ -4,6 +4,7 @@ adapt-all-images=Adaptar todas as imagens (Automatic Translation)
 adapt-remaining=Adaptar o restante (Automatic Translation)
 adapted-images=Adaptado de imagens (Automatic Translation)
 adaptive-media=Adaptive Media (Automatic Copy)
+adaptive-media-configuration-name=Adaptive Media (Automatic Copy)
 add-a-resolution-for-high-density-displays=Adicione uma resolução para telas de alta densidade (2x). (Automatic Translation)
 add-image-resolution=Add Image Resolution (Automatic Copy)
 at-least-one-value-is-required=At least one value is required. (Automatic Copy)
@@ -30,6 +31,10 @@ processing-images.-this-could-take-a-while-depending-on-the-number-of-images=Pro
 the-id-is-based-on-the-name-field=O ID é baseada no campo nome. (Automatic Translation)
 the-images-for-this-resolution-are-already-adapted=As imagens desta resolução já estão adaptadas. (Automatic Translation)
 there-are-no-image-resolutions=There are no image resolutions. You can add one by clicking the plus button on the bottom right corner. (Automatic Copy)
+workers-core-size=Core Processes (Automatic Copy)
+workers-core-size-key-description=O número de processos, sempre disponíveis para gerar adaptado a mídia. Essa configuração não pode exceder os máximos processos de configuração. (Automatic Translation)
+workers-max-size=Max Processes (Automatic Copy)
+workers-max-size-key-description=The maximum number of processes for generating adapted media. (Automatic Copy)
 x-and-x-were-saved-successfully={0} and {1} were saved successfully. (Automatic Copy)
 x-was-deleted-successfully={0} was deleted successfully. (Automatic Copy)
 x-was-disabled-successfully={0} was disabled successfully. (Automatic Copy)
